--- a/index.html
+++ b/index.html
@@ -428,8 +428,8 @@
             { name: "الأحد", classes: ["رياضيات", "أحياء", "E", "BREAK", "فيزياء", "دين", "تاريخ فلسطين", "عربي"] },
             { name: "الإثنين", classes: ["رياضيات", "تكنولوجيا", "E", "BREAK", "فيزياء", "دين", "تاريخ فلسطين", "عربي"] },
             { name: "الثلاثاء", classes: ["رياضيات", "E", "فن", "BREAK", "تاريخ فلسطين", "دين", "كيمياء", "عربي"] },
-            { name: "الأربعاء", classes: ["رياضيات", "أحياء", "E", "BREAK", "عربي", "تاريخ فلسطين", "فيزياء", "عربي"] },
-            { name: "الخميس", classes: ["رياضيات", "E", "تكنولوجيا", "BREAK", "تاريخ فلسطين", "عربي", "كيمياء", "رياضة"] }
+            { name: "الأربعاء", classes: ["رياضيات", "أحياء", "E", "BREAK", "عربي", "تاريخ فلسطين", "فيزياء", "رياضة"] },
+            { name: "الخميس", classes: ["رياضيات", "E", "تكنولوجيا", "BREAK", "تاريخ فلسطين", "عربي", "كيمياء", ""] }
         ];
 
         function showDay(dayName) {
@@ -498,4 +498,3 @@ function toggleMobileMenu() {
     <script>AOS.init({ duration: 1000, once: true });</script>
 </body>
 </html>
-
