--- a/holoul.html
+++ b/holoul.html
@@ -61,7 +61,7 @@
     <main class="max-w-4xl mx-auto px-6 pb-32">
         <div class="flex flex-col gap-5">
 
-            <a href="YOUR_LINK_HERE" target="_blank" class="solution-bar p-6 flex items-center justify-between group" data-aos="fade-up">
+            <a href="https://drive.google.com/drive/folders/1tMKOHdu80awHFJ6KI13mfivuOKOGzwLU?usp=sharing" target="_blank" class="solution-bar p-6 flex items-center justify-between group" data-aos="fade-up">
                 <div class="flex items-center gap-6">
                     <div class="w-16 h-16 bg-emerald-50 text-emerald-600 rounded-2xl flex items-center justify-center text-3xl group-hover:bg-emerald-600 group-hover:text-white transition-all shadow-sm">
                         <i class="fas fa-book-quran"></i>
@@ -77,7 +77,7 @@
                 <i class="fas fa-chevron-left text-slate-300 group-hover:text-emerald-500 group-hover:-translate-x-2 transition-all"></i>
             </a>
 
-            <a href="YOUR_LINK_HERE" target="_blank" class="solution-bar p-6 flex items-center justify-between group" data-aos="fade-up">
+            <a href="https://drive.google.com/drive/folders/1VLxfNwmGBDwhbHGL5VaLrAPs7lykBq0c?usp=sharing" target="_blank" class="solution-bar p-6 flex items-center justify-between group" data-aos="fade-up">
                 <div class="flex items-center gap-6">
                     <div class="w-16 h-16 bg-emerald-50 text-emerald-600 rounded-2xl flex items-center justify-center text-3xl group-hover:bg-emerald-600 group-hover:text-white transition-all shadow-sm">
                         <i class="fas fa-feather-pointed"></i>
@@ -93,7 +93,7 @@
                 <i class="fas fa-chevron-left text-slate-300 group-hover:text-emerald-500 group-hover:-translate-x-2 transition-all"></i>
             </a>
 
-            <a href="YOUR_LINK_HERE" target="_blank" class="solution-bar p-6 flex items-center justify-between group" data-aos="fade-up">
+            <a href="https://drive.google.com/drive/folders/11qUy969Sai6eutqd6BhrtP0tR3Ha90rf?usp=sharing" target="_blank" class="solution-bar p-6 flex items-center justify-between group" data-aos="fade-up">
                 <div class="flex items-center gap-6">
                     <div class="w-16 h-16 bg-emerald-50 text-emerald-600 rounded-2xl flex items-center justify-center text-3xl group-hover:bg-emerald-600 group-hover:text-white transition-all shadow-sm">
                         <i class="fas fa-spell-check"></i>
@@ -108,7 +108,7 @@
                 <i class="fas fa-chevron-left text-slate-300 group-hover:text-emerald-500 group-hover:-translate-x-2 transition-all"></i>
             </a>
 
-            <a href="YOUR_LINK_HERE" target="_blank" class="solution-bar p-6 flex items-center justify-between group" data-aos="fade-up">
+            <a href="https://drive.google.com/drive/folders/1gmuvFG5eET4xp7xo8i86CxejjsPlNREw?usp=sharing" target="_blank" class="solution-bar p-6 flex items-center justify-between group" data-aos="fade-up">
                 <div class="flex items-center gap-6">
                     <div class="w-16 h-16 bg-emerald-50 text-emerald-600 rounded-2xl flex items-center justify-center text-3xl group-hover:bg-emerald-600 group-hover:text-white transition-all shadow-sm">
                         <i class="fas fa-map-location-dot"></i>
@@ -123,7 +123,7 @@
                 <i class="fas fa-chevron-left text-slate-300 group-hover:text-emerald-500 group-hover:-translate-x-2 transition-all"></i>
             </a>
 
-            <a href="YOUR_LINK_HERE" target="_blank" class="solution-bar p-6 flex items-center justify-between group" data-aos="fade-up">
+            <a href="https://drive.google.com/drive/folders/1T-82-qSGHkzgiZxH7MxIMPSEoJltSAnd?usp=sharing" target="_blank" class="solution-bar p-6 flex items-center justify-between group" data-aos="fade-up">
                 <div class="flex items-center gap-6">
                     <div class="w-16 h-16 bg-emerald-50 text-emerald-600 rounded-2xl flex items-center justify-center text-3xl group-hover:bg-emerald-600 group-hover:text-white transition-all shadow-sm">
                         <i class="fas fa-infinity"></i>
@@ -139,7 +139,7 @@
                 <i class="fas fa-chevron-left text-slate-300 group-hover:text-emerald-500 group-hover:-translate-x-2 transition-all"></i>
             </a>
 
-            <a href="YOUR_LINK_HERE" target="_blank" class="solution-bar p-6 flex items-center justify-between group" data-aos="fade-up">
+            <a href="https://drive.google.com/drive/folders/127c99MLrSmVoGbkk6MSw_LRuKp27dbvI?usp=sharing" target="_blank" class="solution-bar p-6 flex items-center justify-between group" data-aos="fade-up">
                 <div class="flex items-center gap-6">
                     <div class="w-16 h-16 bg-emerald-50 text-emerald-600 rounded-2xl flex items-center justify-center text-3xl group-hover:bg-emerald-600 group-hover:text-white transition-all shadow-sm">
                         <i class="fas fa-atom"></i>
@@ -154,7 +154,7 @@
                 <i class="fas fa-chevron-left text-slate-300 group-hover:text-emerald-500 group-hover:-translate-x-2 transition-all"></i>
             </a>
 
-            <a href="YOUR_LINK_HERE" target="_blank" class="solution-bar p-6 flex items-center justify-between group" data-aos="fade-up">
+            <a href="https://drive.google.com/drive/folders/1Zc8Nexwqj8-yI1J9ajThkiTOlLXjRdhr?usp=sharing" target="_blank" class="solution-bar p-6 flex items-center justify-between group" data-aos="fade-up">
                 <div class="flex items-center gap-6">
                     <div class="w-16 h-16 bg-emerald-50 text-emerald-600 rounded-2xl flex items-center justify-center text-3xl group-hover:bg-emerald-600 group-hover:text-white transition-all shadow-sm">
                         <i class="fas fa-vials"></i>
@@ -169,7 +169,7 @@
                 <i class="fas fa-chevron-left text-slate-300 group-hover:text-emerald-500 group-hover:-translate-x-2 transition-all"></i>
             </a>
 
-            <a href="YOUR_LINK_HERE" target="_blank" class="solution-bar p-6 flex items-center justify-between group" data-aos="fade-up">
+            <a href="https://drive.google.com/drive/folders/18Cued5oZPq0bpYF_abamlgxOKg4VhORi?usp=sharing" target="_blank" class="solution-bar p-6 flex items-center justify-between group" data-aos="fade-up">
                 <div class="flex items-center gap-6">
                     <div class="w-16 h-16 bg-emerald-50 text-emerald-600 rounded-2xl flex items-center justify-center text-3xl group-hover:bg-emerald-600 group-hover:text-white transition-all shadow-sm">
                         <i class="fas fa-dna"></i>
@@ -185,7 +185,7 @@
                 <i class="fas fa-chevron-left text-slate-300 group-hover:text-emerald-500 group-hover:-translate-x-2 transition-all"></i>
             </a>
 
-            <a href="YOUR_LINK_HERE" target="_blank" class="solution-bar p-6 flex items-center justify-between group" data-aos="fade-up">
+            <a href="https://drive.google.com/drive/folders/1M2VPQwkOzi-AK5g8bPOZfOxYlS3dYwv4?usp=sharing" target="_blank" class="solution-bar p-6 flex items-center justify-between group" data-aos="fade-up">
                 <div class="flex items-center gap-6">
                     <div class="w-16 h-16 bg-emerald-50 text-emerald-600 rounded-2xl flex items-center justify-center text-3xl group-hover:bg-emerald-600 group-hover:text-white transition-all shadow-sm">
                         <i class="fas fa-microchip"></i>
